# KinSU

./: .gitignore  CONTRIBUTORS  FollKernel_v30022_follkernel_ci.apk.idsig  NOTICE  README.md  README_EN.md  _build_gki.sh  _gki_build.sh  _rebuild_all_ko.sh  analyze_icon.py  build.sh  build_log.txt  build_output.txt  build_output10.txt  build_output11.txt  build_output12.txt  build_output13.txt  build_output2.txt  build_output3.txt  build_output4.txt  build_output5.txt  build_output6.txt  build_output7.txt  build_output8.txt  build_output9.txt  builder_6.1.115.sh  builder_kinsu_mt6989.sh  check_ai_img.py  check_img.py  check_modules.py  check_sig.py  encode_site.py  enhance_site.py  find_launcher.py  fix_css_insert.py  fix_encoding.py  fix_pre_multiline.py  gen_ai_icon.ps1  gen_ai_icon_v3.ps1  gen_icon.py  (+17 more)
.github/workflows/: build-kinsu-mt6989.yml  build-lkm.yml  build-manager-root.yml  build-manager.yml  build.yml  ci-test.yml  follkernel_mt6989.yml  kinsu_build.yml  kinsu_sm8650.yml  ksud-extra.yml  ksud.yml
KernelSU/: .gitignore  README.md  find_hash.py  find_sig.py  repack_apk.py
KernelSU/kernel/: Kbuild  Kconfig  Makefile  setup.sh
KernelSU/manager/: build.gradle.kts  gradle.properties
KernelSU/uapi/: supercall.h
SukiSU_KernelPatch_patch/: .gitignore  README.md  build.sh  make.bat  version
SukiSU_KernelPatch_patch/kernel/: Makefile  kpimg.lds
SukiSU_KernelPatch_patch/patch/: .gitignore  CMakeLists.txt  Makefile  build.sh  encrypt.cpp  main.cpp
SukiSU_KernelPatch_patch/patch/include/: header.h
SukiSU_KernelPatch_patch/patch/res/: start.sh
SukiSU_KernelPatch_patch/tools/: CMakeLists.txt  bootimg.c  kallsym.c  kallsym.h  patch.c  symbol.c  symbol.h
kernel/: .gitignore  Kbuild  Kconfig  build-all.sh
kernel/core/: init.c
kernel/kpm/: compact.c  kpm.c  kpm.h  module.c  module.h  (+4 more)
kinsu-site/: index.html  index_decoded.html
manager/: .gitignore  CONTRIBUTORS.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
scripts/: extract_apk_signature.py  extract_sig.py  fix_manager_recognition.sh  ksubot.py  patch_ko_signatures.py
susfs_patch/: 10_enable_susfs_for_ksu.patch
tmp/: bing_hires.py  build_all_ko.sh  build_ko.sh  build_ko_chroot.sh  build_kpm.sh  build_ksud.sh  build_ksud2.sh  build_ksud3.sh  build_remaining.sh  check_apk_kmi.py  check_ko.sh  check_ko_hash.py  check_manifest.py  check_versions.py  clone_kernel.sh  compare_ksud.py  copy_ko_assets.sh  copy_latest_icons.py  copy_user_icons.py  debug_repack.py  decompress_check.py  download_ai_img.py  download_all_ddk.sh  download_img.py  download_img2.py  download_img3.py  download_user_icon.py  download_user_icon2.py  extract_icon.py  extract_icon2.py  extract_sig.py  extract_sig2.py  find_icons.py  preview.html  preview_bohe.html  preview_bohe_v2.html  preview_user_icon.html  process_bohe_icon.py  process_bohe_icon_v2.py  process_latest_icon.py  (+10 more)
uapi/: supercall.h
wizo-mobile-shop/: colors_and_type.css  wizo-mobile-shop.design
ycfwq/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+559 files in other folders)
